// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UserList/utils/getTableColumns builds table columns correctly with sorted info: table columns with sorted info 1`] = `
Array [
  Object {
    "dataIndex": "firstName",
    "ellipsis": true,
    "key": "firstName",
    "sortOrder": "ascend",
    "sorter": [Function],
    "title": "First Name",
  },
  Object {
    "dataIndex": "lastName",
    "ellipsis": true,
    "key": "lastName",
    "sortOrder": false,
    "sorter": [Function],
    "title": "Last Name",
  },
  Object {
    "dataIndex": "username",
    "ellipsis": true,
    "key": "username",
    "sortOrder": false,
    "sorter": [Function],
    "title": "Username",
  },
]
`;

exports[`components/UserList/utils/getTableColumns builds table columns correctly: table columns 1`] = `
Array [
  Object {
    "dataIndex": "firstName",
    "ellipsis": true,
    "key": "firstName",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "First Name",
  },
  Object {
    "dataIndex": "lastName",
    "ellipsis": true,
    "key": "lastName",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "Last Name",
  },
  Object {
    "dataIndex": "username",
    "ellipsis": true,
    "key": "username",
    "sortOrder": undefined,
    "sorter": [Function],
    "title": "Username",
  },
]
`;
